--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -28,8 +28,8 @@
     </div>
 
     <div class="copyright">
-        Powered by <a href="https://ghost.org/" target="_blank"
-            rel="noopener noreferrer">Ghost</a>
+        Created by <a href="https://twitter.com/donnihonig" target="_blank"
+            rel="noopener noreferrer">Donni Honig</a>
     </div>
 
     <nav class="footer-nav">
