--- a/partials/cover.hbs
+++ b/partials/cover.hbs
@@ -2,7 +2,7 @@
     <div class="cover-content">
         {{#if @site.icon}}
             <div class="cover-icon">
-                <img class="cover-icon-image" src="{{@site.icon}}" alt="{{@site.title}}">
+                <img class="cover-icon-image" src="{{@site.cover_image}}" alt="{{@site.title}}">
             </div>
         {{/if}}
 
