--- a/partials/content.hbs
+++ b/partials/content.hbs
@@ -102,12 +102,7 @@
                                         alt="{{name}}">
                                 </a>
                             </div>
-                    </div>
-                </div>
-                <div class="single-footer-bottom">
-                    <div class="share">
-                        </a>
-                        </a>
+                        {{/foreach}}
                     </div>
                 </div>
             </div>
